Just use CONFIG_NLS instead of USE_NLS and ENABLE_NLS. Simplify Makefile so the 'all' target depends directly on CATALOGS which are only defined to something when NLS is enabled.

--- a/po/Makefile.in
+++ b/po/Makefile.in
@@ -72,10 +72,7 @@ CATALOGS = @CATALOGS@
 	  && rm -f $$file && echo -n $*": " && $(GMSGFMT) --statistics -o $$file $<
 
 
-all: all-@USE_NLS@
-
-all-yes: $(CATALOGS)
-all-no:
+all: $(CATALOGS)
 
 # Note: Target 'all' must not depend on target '$(srcdir)/$(PACKAGE).pot',
 # otherwise packages like GCC can not be built if only parts of the source
