--- a/configure.in
+++ b/configure.in
@@ -1,12 +1,13 @@
 dnl Process this file with autoconf to produce a configure script.
 
+AC_PREREQ(2.13)
 AC_INIT(src/main.c)
+AC_CONFIG_AUX_DIR(config)
 
 AM_INIT_AUTOMAKE(elinks, 0.11.CVS)
 AM_CONFIG_HEADER(config.h)
 
 AC_PROG_MAKE_SET
-AC_PREREQ(2.13)
 
 dnl ===================================================================
 dnl Load feature configuration file and start logging features.
