Fix issues with make dist. Now all the lovely files in config/ needed by configure will be added. Cleanup the top-level Makefile.am a bit.

--- a/configure.in
+++ b/configure.in
@@ -1028,6 +1028,7 @@ dnl ===================================================================
 AC_OUTPUT([ \
  Makefile \
  Unicode/Makefile \
+ config/Makefile \
  contrib/Makefile \
  contrib/elinks.spec \
  contrib/lua/hooks.lua \
