--- a/po/Makefile.in
+++ b/po/Makefile.in
@@ -103,7 +103,7 @@ install-exec:
 install-data: install-data-@CONFIG_NLS@
 install-data-no: all
 install-data-yes: all
-	$(mkinstalldirs) $(DESTDIR)$(datadir)
+	$(mkinstalldirs) $(DESTDIR)$(localedir)
 	@catalogs='$(CATALOGS)'; \
 	for cat in $$catalogs; do \
 	  cat=`basename $$cat`; \
