Integrate debian/ with the build system.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.43 2005/01/08 21:45:28 jonas Exp $
+## $Id: Makefile.am,v 1.44 2005/01/11 00:38:00 jonas Exp $
 
-SUBDIRS = Unicode config contrib doc intl po src test
+SUBDIRS = Unicode config contrib debian doc intl po src test
 
 EXTRA_DIST = \
  ABOUT-NLS \
