--- a/debian/rules
+++ b/debian/rules
@@ -1,35 +1,68 @@
 #!/usr/bin/make -f
-# $Id: rules,v 1.8 2005/01/11 08:02:29 jonas Exp $
+# $Id: rules,v 1.9 2005/01/11 13:35:57 jonas Exp $
 # Sample debian/rules that uses debhelper.
 # GNU copyright 1997 to 1999 by Joey Hess.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
-# This is the debhelper compatability version to use.
+# This is the debhelper compatibility version to use.
 #export DH_COMPAT=2   # this should work if your debhelper is older!
 export DH_COMPAT=4
+
+
+## Handling of DEB_BUILD_OPTIONS
+#
+# debug		- turn on all the built-in debugging
+# nostrip	- dh_strip will take care of this
+# noopt		- compiled with a minimum of optimization
+
+ifneq (,$(findstring debug, $(DEB_BUILD_OPTIONS)))
+CONFIGURE_MODE	= --enable-debug
+endif
+
+ifneq (,$(findstring noopt, $(DEB_BUILD_OPTIONS)))
+CFLAGS	       += -O0
+else
+ifeq (,$(CONFIGURE_MODE))
+CONFIGURE_MODE	= --enable-fastmem
+endif
+endif
+
+# Export it so configure can grab it
+export CFLAGS
+
+
+## Compile Configuration
+#
+# with GNUTLS	- due to license restictions
+# without X	- since it only needed for RESETTING the xterm title and
+#		  resizing xterm windows
+CONFIGURE_OPTIONS = \
+ --prefix=/usr \
+ --mandir=\$${prefix}/share/man \
+ --sysconfdir=/etc/elinks \
+ --without-openssl \
+ --without-x \
+ --with-gnutls=/usr
+
+
+# The .deb file packaging root directory
+DEB_ROOT = debian/elinks
+
 
 build: build-stamp
 build-stamp:
 	dh_testdir
-
-	# compiling without X, since it only needed for RESETTING xterm title
-	# comp. with GNUTLS due to license restictions.
-	./configure --prefix=/usr --mandir=\$${prefix}/share/man \
-	--sysconfdir=/etc/elinks \
-	--without-openssl --without-x --with-gnutls=/usr
-	# --enable-debug
-	# Add here commands to compile the package.
+	./configure $(CONFIGURE_MODE) $(CONFIGURE_OPTIONS)
 	$(MAKE)
-
 	touch build-stamp
 
 clean:
 	dh_testdir
 	dh_testroot
 	rm -f build-stamp
-	rm -rf debian/elinks/
+	rm -rf $(DEB_ROOT)
 
 	# Add here commands to clean up after the build process.
 	-$(MAKE) distclean
@@ -48,17 +81,17 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/elinks.
-	$(MAKE) install DESTDIR=`pwd`/debian/elinks
+	$(MAKE) install DESTDIR=$(DEB_ROOT)
 	
-	mkdir -p debian/elinks/etc/elinks
-	install -o root -g root -m 644 contrib/elinks.conf debian/elinks/etc/elinks/elinks.conf
+	mkdir -p $(DEB_ROOT)/etc/elinks
+	install -o root -g root -m 644 contrib/elinks.conf $(DEB_ROOT)/etc/elinks/elinks.conf
 # KDE menu integration
 	mkdir -p debian/elinks/usr/share/applnk/Internet/
-	cp debian/elinks.desktop debian/elinks/usr/share/applnk/Internet/
+	cp debian/elinks.desktop $(DEB_ROOT)/usr/share/applnk/Internet/
 # upstream CVS bug hack: remove double contrib dirs
 	-rm -rf contrib/lua/lua contrib/conv/conv contrib/guile/guile
 # locale.alias causes conflicts and I believe it's not necessary
-	-rm -f debian/elinks/usr/share/locale/locale.alias
+	-rm -f $(DEB_ROOT)/usr/share/locale/locale.alias
 
 	touch install-stamp
 
@@ -74,14 +107,13 @@ binary-arch: build install
 	dh_installdebconf	
 	dh_installdocs
 	dh_installexamples \
-		-X CVS -X .cvsignore -X Makefile.am -X Makefile.in -X colws.diff \
-		-X elinks.spec -X hooks.lua.in -X links_wps.zip -X wipe-out-ssl \
-		-X LinksOS2Icon.zip contrib/
+		-X CVS -X .cvsignore -X Makefile. -X colws.diff \
+		-X elinks.spec -X hooks.lua.in -X links_wps.zip \
+		-X wipe-out-ssl -X LinksOS2Icon.zip -X js-1.5-rc6a \
+		contrib/
 
-# remove CVS directories, Makefiles and other useless files (from contrib/)
-# XXX: Keep after installation of directories
-	-find debian/elinks -name "js-*.patch" -exec rm -rf "{}" \;
-	-find debian/elinks -name Makefile -exec rm -rf "{}" \;
+	# Remove additional files that dh_installexamples -X won't handle
+	-find $(DEB_ROOT) -name Makefile -exec rm -rf "{}" \;
 
 	dh_installmime
 	dh_installmenu
