--- a/debian/rules
+++ b/debian/rules
@@ -1,5 +1,5 @@
 #!/usr/bin/make -f
-# $Id: rules,v 1.10 2005/01/11 14:36:47 jonas Exp $
+# $Id: rules,v 1.11 2005/01/11 14:57:08 jonas Exp $
 # Sample debian/rules that uses debhelper.
 # GNU copyright 1997 to 1999 by Joey Hess.
 
@@ -9,6 +9,12 @@
 # This is the debhelper compatibility version to use.
 #export DH_COMPAT=2   # this should work if your debhelper is older!
 export DH_COMPAT=4
+
+
+# This adds the values the variable is set to to the -X options of all commands
+# that support the -X option
+# XXX: The last _has_ to be `Makefil', since find chokes on `Makefile'
+export DH_ALWAYS_EXCLUDE=CVS:.cvsignore:.vimrc:Makefil
 
 
 ## Handling of DEB_BUILD_OPTIONS
@@ -105,13 +111,10 @@ binary-arch: build install
 	dh_installdebconf	
 	dh_installdocs
 	dh_installexamples \
-		-X CVS -X .cvsignore -X Makefile. -X colws.diff \
-		-X elinks.spec -X hooks.lua.in -X links_wps.zip \
-		-X wipe-out-ssl -X LinksOS2Icon.zip -X js-1.5-rc6a \
-		contrib/
+		-X colws.diff -X elinks.spec -X hooks.lua.in -X links_wps.zip \
+		-X wipe-out-ssl -X LinksOS2Icon.zip -X js-1.5-rc6a contrib/
 
 	# Remove additional files that dh_installexamples -X won't handle
-	-find $(DEB_ROOT) -name Makefile -exec rm -rf "{}" \;
 
 	dh_installmime
 	dh_installmenu
