--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 # ELinks debian/rules that uses debhelper.
 # GNU copyright 1997 to 1999 by Joey Hess.
 #
-# $Id: rules,v 1.12 2005/01/11 15:34:44 jonas Exp $
+# $Id: rules,v 1.13 2005/01/11 21:32:04 jonas Exp $
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
@@ -56,7 +56,7 @@ CONFIGURE_OPTIONS = \
 
 
 # The .deb file packaging root directory
-DEB_ROOT = debian/elinks
+DEB_ROOT = `pwd`/debian/elinks
 
 
 build: debian/build-stamp
@@ -78,6 +78,7 @@ clean:
 	| sed "s/@linux-gnu@/`type-handling any linux-gnu`/g" \
 	> debian/control
 	
+#	-find . -name ".#*" -exec rm -rf "{}" \;
 	dh_clean
 
 install: build
