--- a/src/scripting/lua/Makefile.am
+++ b/src/scripting/lua/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.12 2003/11/10 20:35:34 pasky Exp $
+## $Id: Makefile.am,v 1.13 2005/01/13 13:30:39 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
 
@@ -10,5 +10,6 @@ libscriptinglua_a_SOURCES = \
  core.c \
  core.h \
  hooks.c \
- hooks.h
+ hooks.h \
+ lua.h
 
