--- a/src/ecmascript/Makefile.am
+++ b/src/ecmascript/Makefile.am
@@ -1,7 +1,9 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.2 2004/09/22 15:22:34 pasky Exp $
+## $Id: Makefile.am,v 1.3 2005/01/13 14:14:50 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
+
+INCLUDES += $(SPIDERMONKEY_CFLAGS)
 
 noinst_LIBRARIES = libecmascript.a
 libecmascript_a_SOURCES = \
