--- a/src/scripting/guile/Makefile.am
+++ b/src/scripting/guile/Makefile.am
@@ -1,9 +1,11 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.3 2003/11/10 20:35:33 pasky Exp $
+## $Id: Makefile.am,v 1.4 2005/01/13 14:14:50 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
 
 EXTRA_DIST = README
+
+INCLUDES += $(GUILE_CFLAGS)
 
 noinst_LIBRARIES = libscriptingguile.a
 libscriptingguile_a_SOURCES = \
