--- a/src/scripting/perl/Makefile.am
+++ b/src/scripting/perl/Makefile.am
@@ -1,7 +1,9 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.2 2005/01/03 03:40:51 jonas Exp $
+## $Id: Makefile.am,v 1.3 2005/01/13 14:14:51 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
+
+INCLUDES += $(PERL_CFLAGS)
 
 noinst_LIBRARIES = libscriptingperl.a
 libscriptingperl_a_SOURCES = \
