--- a/src/protocol/auth/Makefile.am
+++ b/src/protocol/auth/Makefile.am
@@ -1,7 +1,10 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.6 2004/11/27 17:53:35 jonas Exp $
+## $Id: Makefile.am,v 1.7 2005/01/13 15:55:57 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
+
+# Needed for the digest MD5 sum calculation.
+INCLUDES += $(GNUTLS_CFLAGS) $(OPENSSL_CFLAGS)
 
 noinst_LIBRARIES = libauth.a
 libauth_a_SOURCES = \
