acinclude.m4 requires autogen.sh to be run, which depends on special tools, so only add it to MAINTAINERCLEANFILES.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.45 2005/01/12 15:18:53 zas Exp $
+## $Id: Makefile.am,v 1.46 2005/01/18 22:25:34 jonas Exp $
 
 SUBDIRS = Unicode config contrib debian doc intl po src test
 
@@ -21,4 +21,4 @@ install-exec-hook:
 
 
 CLEANFILES = $(srcdir)/features.log
-DISTCLEANFILES = $(srcdir)/acinclude.m4
+MAINTAINERCLEANFILES = $(srcdir)/acinclude.m4
