Don't print the shell code and echo the language code.

--- a/po/Makefile.am
+++ b/po/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.5 2005/02/01 23:47:53 jonas Exp $
+## $Id: Makefile.am,v 1.6 2005/02/01 23:51:06 jonas Exp $
 
 EXTRA_DIST = README $(PACKAGE).pot $(POFILES) $(GMOFILES)
 
@@ -96,7 +96,7 @@ update-gmo: Makefile $(GMOFILES)
 #
 
 check-po:
-	if test -n "$(PO)"; then \
+	@if test -n "$(PO)"; then \
 	  lang=`echo $(PO) | sed 's/\.po//'`; \
 	  catalogs=$$lang.gmo; \
 	fi; \
@@ -104,6 +104,7 @@ check-po:
 	for cat in $$catalogs; do \
 	  cat=`basename $$cat`; \
 	  lang=`echo $$cat | sed 's/\.gmo$$//'`; \
+	  echo -n "$$lang: "; \
 	  $(GMSGFMT) --check --verbose --statistics -o /dev/null $$lang.po; \
 	done
 
