Add win32 specific configuration.

--- a/configure.in
+++ b/configure.in
@@ -354,6 +354,14 @@ if test "$CONFIG_OS2" = yes; then
 fi
 
 dnl ===================================================================
+dnl Checks for Win32
+dnl ===================================================================
+
+if test "$CONFIG_WIN32" = yes; then
+	EL_CONFIG_WIN32
+fi
+
+dnl ===================================================================
 dnl Check for Guile, optional even if installed.
 dnl ===================================================================
 
