--- a/configure.in
+++ b/configure.in
@@ -164,7 +164,7 @@ AC_CHECK_FUNCS(strcasecmp strncasecmp strcasestr strstr strchr strrchr)
 AC_CHECK_FUNCS(memmove bcopy stpcpy strdup index isdigit mempcpy memrchr)
 AC_CHECK_FUNCS(snprintf vsnprintf asprintf vasprintf)
 AC_CHECK_FUNCS(getifaddrs getpwnam inet_pton)
-AC_CHECK_FUNCS(fflush fsync)
+AC_CHECK_FUNCS(fflush fsync sigaction)
 
 AC_HAVE_FUNCS(cygwin_conv_to_full_win32_path)
 
