This update by Russ Rowan has 4 parts:
1) This part includes some cleanups.  The random URL generator now looks in more
   places for words, including ~/.elinks/elinks.words, if it exists.

2) This part adds the new fortune quit hook.  It will now look in several
   locations for "elinks.lines" (/etc/elinks, ~/.elinks, the docs directory) in
   standard fortune format.  If found, it will output a random tip or bit of
   humor from #elinks.  If not, it will fall back to the previous behavior.

3) This part adds a new smart prefix.  xyzzy.  Just try it a few times.  Ah,
   the Good Old Days.

4) This part adds a new follow_url_hook.  All Usenet links now become links to
   the Google Groups archive for that group.  The hook defaults to the "old
   style".  If you, for some reason, prefer Google Groups Beta, just touch a
   file called "beta" in ~/.elinks and it will use that.

--- a/contrib/Makefile.am
+++ b/contrib/Makefile.am
@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-## $Id: Makefile.am,v 1.11 2005/01/30 21:11:53 jonas Exp $
+## $Id: Makefile.am,v 1.12 2005/02/28 20:15:02 jonas Exp $
 
 include $(top_srcdir)/Makefile.base
 
@@ -9,6 +9,7 @@ EXTRA_DIST = \
  colws.diff \
  elinks.conf \
  elinks-vim.diff \
+ elinks.fortune \
  elinks.spec.in \
  elinks.vim \
  js-1.5-rc6a+elinks.patch \
@@ -32,4 +33,4 @@ EXTRA_DIST = \
  lua/md5check.lua \
  lua/remote.lua \
  perl/hooks.pl \
- ruby/hooks.pl
+ ruby/hooks.rb
