--- a/contrib/conv/w3m2links.awk.in
+++ b/contrib/conv/w3m2links.awk.in
@@ -1,4 +1,4 @@
-#! /usr/bin/gawk -f
+#!@AWK@ -f
 #
 # This converts w3m bookmarks.html to ELinks bookmarks.lst used by the Lua
 # based bookmarks handling (NOT the internal one!).
